--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,17 +8,25 @@ body {
 
 .container {
     background-color: palevioletred;
+    margin: auto;
+    width: 60%;
+    width: 90vh;
     border-radius: 8px;
     box-shadow: pink(60, 64, 67, 2); 
-    margin-left:auto;
-    margin-right:auto;
-    padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 
+h1 {
+    background-color: lightpink;
+    padding: 10px;
+    border:lightpink 1px;
+    border-radius: 10px;
+    font-size: 60px;
+    font-family: serif;
+}
 
 
 .buttons {
@@ -71,10 +79,7 @@ a {
     border: none;
     
         }
-h1 {
-    font-size: 100px;
-    font-family: serif;
-}
+
 ul {
 
     list-style: none;
