--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -1,24 +1,72 @@
 
 
+
+
 body {
-    font-style: none;
-    font-family: ;
+    background-color:papayawhip;
     
 }
 
+a {
+    text-decoration: none;
+    font-style: none;
+    border: none;
+        }
+
 .container {
     background-color: palevioletred;
+    margin: auto;
+    width: 60%;
+    width: 90vh;
     border-radius: 8px;
     box-shadow: pink(60, 64, 67, 2); 
-    margin-left:auto;
-    margin-right:auto;
-    padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 
+h1 {
+    background-color: lightpink;
+    padding: 10px;
+    border: 10px double wheat;
+    border-radius: 20px;
+    font-size: 60px;
+    font-family: serif;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+}
+
+.buttons:hover {
+    cursor: pointer;
+
+}
+
+#playgame {
+    text-align: center;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: 200;
+    padding: 2%;
+    margin: 20px;
+    border:wheat 5px;
+    background-color:lightpink;
+    border-radius: 10px
+}
+
+
+.startbutton {
+    text-decoration: none;
+    font-size: 30px;
+    padding: 1%;
+    margin: 20px;
+    border:wheat 4px double;
+    background-color:lightpink;
+    border-radius: 10px
+
+}
 
 .timer {
     font-family: 'Courier New', Courier, monospace;
