--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,15 @@
 
 
 body {
-    font-style: none;
-    font-family: ;
+    background-color:papayawhip;
     
 }
+
+a {
+    text-decoration: none;
+    font-style: none;
+    border: none;
+        }
 
 .container {
     background-color: palevioletred;
@@ -22,21 +27,16 @@ body {
 h1 {
     background-color: lightpink;
     padding: 10px;
-    border:lightpink 1px;
-    border-radius: 10px;
+    border: 10px double wheat;
+    border-radius: 20px;
     font-size: 60px;
     font-family: serif;
 }
 
-
 .buttons {
-    font-size: 16px;
-    text-decoration: none;
     display: flex;
     flex-direction: column;
-     
-
-} 
+}
 
 .buttons:hover {
     cursor: pointer;
@@ -44,20 +44,24 @@ h1 {
 }
 
 #playgame {
-    padding: 4%;
+    text-align: center;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight: 200;
+    padding: 2%;
     margin: 20px;
-    border:gold 5px solid;
-    background-color: rgb(170, 238, 200);
+    border:wheat 5px;
+    background-color:lightpink;
     border-radius: 10px
-
 }
-#no, #yes {
+
+
+#noBtn, #yesBtn, #highscoreBtn {
     text-decoration: none;
     font-size: 30px;
     padding: 1%;
     margin: 20px;
-    border:gold 5px solid;
-    background-color: rgb(170, 238, 200);
+    border:wheat 4px double;
+    background-color:lightpink;
     border-radius: 10px
 
 }
@@ -73,19 +77,9 @@ h1 {
 
 }
 
-a {
-    text-decoration: none;
-    font-style: none;
-    border: none;
-    
-        }
 
 ul {
 
     list-style: none;
     font-size: large;
-}
-
-a {
-    font-style: none;
 }
