--- a/assets/css/no.css
+++ b/assets/css/no.css
@@ -44,19 +44,7 @@ h1 {
 
 }
 
-#playgame {
-    text-align: center;
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight: 200;
-    padding: 2%;
-    margin: 20px;
-    border:wheat 5px;
-    background-color:lightpink;
-    border-radius: 10px
-}
-
-
-#noBtn, #yesBtn, #highscoreBtn {
+#homeBtn {
     text-decoration: none;
     font-size: 30px;
     padding: 1%;
@@ -67,20 +55,3 @@ h1 {
 
 }
 
-#highscore {
-    text-decoration: none;
-    font-size: 30px;
-    padding: 1%;
-    margin: 20px;
-    border:gold 5px solid;
-    background-color: rgb(170, 238, 200);
-    border-radius: 10px
-
-}
-
-
-ul {
-
-    list-style: none;
-    font-size: large;
-}
