--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -1,7 +1,4 @@
 
-
-
-
 body {
     background-color:papayawhip;
     
@@ -9,21 +6,22 @@ body {
 
 a {
     text-decoration: none;
+    color:black;
     font-style: none;
     border: none;
         }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: palevioletred;
     margin: auto;
     width: 60%;
     width: 90vh;
     border-radius: 8px;
     box-shadow: pink(60, 64, 67, 2); 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
   }
 
 h1 {
@@ -35,29 +33,14 @@ h1 {
     font-family: serif;
 }
 
-.buttons {
-    display: flex;
-    flex-direction: column;
-}
 
 .buttons:hover {
     cursor: pointer;
 
 }
 
-#playgame {
-    text-align: center;
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight: 200;
-    padding: 2%;
-    margin: 20px;
-    border:wheat 5px;
-    background-color:lightpink;
-    border-radius: 10px
-}
 
-
-.startbutton {
+#start-button, #homeBtn {
     text-decoration: none;
     font-size: 30px;
     padding: 1%;
@@ -70,8 +53,7 @@ h1 {
 
 .timer {
     font-family: 'Courier New', Courier, monospace;
-    font-size: 80px;
-    background-color: hotpink;
+    font-size: 30px;
 
 }
 
