--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -3,6 +3,7 @@ body {
     background-color:papayawhip;
     
 }
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
 
 a {
     text-decoration: none;
@@ -30,7 +31,7 @@ h1 {
     border: 10px double wheat;
     border-radius: 20px;
     font-size: 60px;
-    font-family: serif;
+    font-family: 'Orbitron', sans-serif;
 }
 
 
