--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
 
 body {
     background-color:papayawhip;
@@ -7,6 +7,7 @@ body {
 
 a {
     text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
     color: black;
     font-style: none;
     border: none;
@@ -30,8 +31,9 @@ h1 {
     padding: 10px;
     border: 10px double wheat;
     border-radius: 20px;
-    font-size: 60px;
-    font-family: serif;
+    font-size: 54px;
+    font-family: 'Orbitron', sans-serif;
+    
 }
 
 .buttons {
@@ -50,7 +52,7 @@ h1 {
     font-weight: 200;
     padding: 2%;
     margin: 20px;
-    border:wheat 5px;
+    border:wheat double 10px;
     background-color:lightpink;
     border-radius: 10px
 }
