--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -30,7 +30,7 @@ h1 {
     padding: 10px;
     border: 10px double wheat;
     border-radius: 20px;
-    font-size: 60px;
+    font-size: 54px;
     font-family: 'Orbitron', sans-serif;
 }
 
@@ -41,7 +41,7 @@ h1 {
 }
 
 
-#start-button, #homeBtn {
+#start-button, .quiz-button {
     text-decoration: none;
     font-size: 30px;
     padding: 1%;
@@ -49,6 +49,18 @@ h1 {
     border:wheat 4px double;
     background-color:lightpink;
     border-radius: 10px
+
+}
+
+#homeBtn {
+     text-decoration: none;
+    font-size: 30px;
+    padding: 1%;
+    margin: 20px;
+    border:wheat 4px double;
+    background-color:lightpink;
+    border-radius: 10px
+
 
 }
 
