--- a/assets/css/highscore.css
+++ b/assets/css/highscore.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&family=Roboto+Mono:wght@300&display=swap');
 
 body {
     background-color:papayawhip;
@@ -7,7 +8,9 @@ body {
 
 a {
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Orbitron', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', monospace;
     color: black;
     font-style: none;
     border: none;
@@ -36,20 +39,18 @@ h1 {
     
 }
 
-.buttons {
-    display: flex;
-    flex-direction: column;
+h2 {
+    font-family: 'Orbitron', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', monospace;
 }
 
-.buttons:hover {
-    cursor: pointer;
-
-}
-
-#playgame {
+#highscores, #homeBtn {
     text-align: center;
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight: 200;
+    font-family: 'Orbitron', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 36px;
     padding: 2%;
     margin: 20px;
     border:wheat double 10px;
@@ -58,31 +59,3 @@ h1 {
 }
 
 
-#noBtn, #yesBtn, #highscoreBtn {
-    text-decoration: none;
-    font-size: 30px;
-    padding: 1%;
-    margin: 20px;
-    border:wheat 4px double;
-    background-color:lightpink;
-    border-radius: 10px
-
-}
-
-#highscore {
-    text-decoration: none;
-    font-size: 30px;
-    padding: 1%;
-    margin: 20px;
-    border:gold 5px solid;
-    background-color: rgb(170, 238, 200);
-    border-radius: 10px
-
-}
-
-
-ul {
-
-    list-style: none;
-    font-size: large;
-}
