--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&family=Roboto+Mono:wght@300&display=swap');
 
 body {
     background-color:papayawhip;
+    background-image:url("../images/camelCase.png");
+    background-repeat: no-repeat; 
+    background-attachment: fixed;
+    background-position: center bottom;
+    margin: 3%; 
+    
     
 }
 
 a {
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Orbitron', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', monospace;
     color: black;
     font-style: none;
     border: none;
@@ -36,9 +45,16 @@ h1 {
     
 }
 
+h2 {
+    font-family: 'Orbitron', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', monospace;
+}
+
 .buttons {
     display: flex;
     flex-direction: column;
+    
 }
 
 .buttons:hover {
@@ -48,8 +64,10 @@ h1 {
 
 #playgame {
     text-align: center;
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight: 200;
+    font-family: 'Orbitron', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 36px;
     padding: 2%;
     margin: 20px;
     border:wheat double 10px;
@@ -80,9 +98,3 @@ h1 {
 
 }
 
-
-ul {
-
-    list-style: none;
-    font-size: large;
-}
