finished questions updated javascript

--- a/assets/css/no.css
+++ b/assets/css/no.css
@@ -2,6 +2,11 @@
 
 body {
     background-color:papayawhip;
+    background-image:url("../images/camelCase.png");
+    background-repeat: no-repeat; 
+    background-attachment: fixed;
+    background-position: center bottom;
+    margin: 3%; 
     
 }
 
