--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -1,6 +1,11 @@
 
 body {
     background-color:papayawhip;
+    background-image:url("../images/camelCase.png");
+    background-repeat: no-repeat; 
+    background-attachment: fixed;
+    background-position: center bottom;
+    margin: 3%; 
     
 }
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
@@ -8,8 +13,10 @@ body {
 a {
     text-decoration: none;
     color:black;
-    font-style: none;
-    border: none;
+    text-decoration: none;
+    font-family: 'Orbitron', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', monospace;
         }
 
 .container {
@@ -43,6 +50,10 @@ h1 {
 
 #start-button, .quiz-button {
     text-decoration: none;
+    text-decoration: none;
+    font-family: 'Orbitron', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', monospace;
     font-size: 30px;
     padding: 1%;
     margin: 20px;
