--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -50,7 +50,6 @@ h1 {
 
 #start-button, .quiz-button {
     text-decoration: none;
-    text-decoration: none;
     font-family: 'Orbitron', sans-serif;
     font-family: 'Roboto', sans-serif;
     font-family: 'Roboto Mono', monospace;
@@ -59,6 +58,19 @@ h1 {
     margin: 20px;
     border:wheat 4px double;
     background-color:lightpink;
+    border-radius: 10px
+
+}
+
+#questionchoices {
+    text-decoration: none;
+    font-family: 'Orbitron', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 24px;
+    padding: 1%;
+    margin: 20px;
+    border:wheat 4px double;
     border-radius: 10px
 
 }
@@ -80,7 +92,6 @@ h1 {
     font-size: 30px;
 
 }
-
 
 
 
