--- a/assets/css/no.css
+++ b/assets/css/no.css
@@ -12,7 +12,7 @@ body {
 
 a {
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Orbitron', sans-serif;
     color: black;
     font-style: none;
     border: none;
@@ -41,6 +41,17 @@ h1 {
     
 }
 
+
+h2 {
+    font-family: 'Orbitron', sans-serif;
+    background-color: lightpink;
+    padding: 10px;
+    border: 10px double wheat;
+    border-radius: 20px;
+    font-size: 36px;
+    
+}
+
 .buttons {
     display: flex;
     flex-direction: column;
@@ -51,19 +62,9 @@ h1 {
 
 }
 
-#playgame {
-    text-align: center;
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight: 200;
-    padding: 2%;
-    margin: 20px;
-    border:wheat double 10px;
-    background-color:lightpink;
-    border-radius: 10px
-}
 
 
-#noBtn, #yesBtn, #highscoreBtn {
+#homeBtn {
     text-decoration: none;
     font-size: 30px;
     padding: 1%;
@@ -72,22 +73,4 @@ h1 {
     background-color:lightpink;
     border-radius: 10px
 
-}
-
-#highscore {
-    text-decoration: none;
-    font-size: 30px;
-    padding: 1%;
-    margin: 20px;
-    border:gold 5px solid;
-    background-color: rgb(170, 238, 200);
-    border-radius: 10px
-
-}
-
-
-ul {
-
-    list-style: none;
-    font-size: large;
 }
