cleaned up some code

--- a/assets/css/highscore.css
+++ b/assets/css/highscore.css
@@ -54,7 +54,7 @@ h2 {
     text-align: center;
 }
 
- #homeBtn, #nameHS, #highscores {
+ #homeBtn, #namePh, #highscores {
     font-family: 'Roboto', sans-serif;
     font-family: 'Roboto Mono', monospace;
     font-size: 36px;
