--- a/assets/css/no.css
+++ b/assets/css/no.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&family=Roboto+Mono:wght@300&display=swap');import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
 
 body {
     background-color:papayawhip;
@@ -42,8 +43,9 @@ h1 {
 }
 
 
-h2 {
-    font-family: 'Orbitron', sans-serif;
+h3 {
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', monospace;
     background-color: lightpink;
     padding: 10px;
     border: 10px double wheat;
@@ -52,15 +54,6 @@ h2 {
     
 }
 
-.buttons {
-    display: flex;
-    flex-direction: column;
-}
-
-.buttons:hover {
-    cursor: pointer;
-
-}
 
 
 
