--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&family=Roboto+Mono:wght@300&display=swap');import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&family=Roboto+Mono:wght@300&display=swap');
 
 body {
     background-color:papayawhip;
     background-image:url("../images/camelCase.png");
-    background-repeat: no-repeat; 
+    background-repeat: repeat; 
     background-attachment: fixed;
     background-position: center bottom;
     margin: 3%; 
