--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,11 +4,10 @@
 body {
     background-color:papayawhip;
     background-image:url("../images/camelCase.png");
-    background-repeat: no-repeat; 
+    background-repeat: repeat; 
     background-attachment: fixed;
     background-position: center bottom;
-    margin: 3%; 
-    
+    margin: 3%;     
     
 }
 
@@ -86,6 +85,5 @@ h2 {
     border-radius: 10px
 
 }
-
 
 
