--- a/assets/css/highscore.css
+++ b/assets/css/highscore.css
@@ -24,8 +24,10 @@ a {
 .container {
     background-color: palevioletred;
     margin: auto;
+    width: 70%;
     width: 90vh;
     border-radius: 8px;
+    padding: 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -44,7 +46,6 @@ h1 {
 
 h2 {
     background-color: lightpink;
-    padding: 10px;
     border: 10px double wheat;
     border-radius: 20px;
     font-size: 36px;
@@ -54,11 +55,11 @@ h2 {
     text-align: center;
 }
 
- #homeBtn, #namePh, #highscores {
+ #homeBtn, #namePh, #highscores, #submitBtn {
     font-family: 'Roboto', sans-serif;
     font-family: 'Roboto Mono', monospace;
     font-size: 36px;
-    padding: 2%;
+    padding: 3%;
     margin: 20px;
     border:wheat double 10px;
     background-color:lightpink;
